--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -15,6 +15,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Mats Wichmann
     - Replace instances of string find method with "in" checks where
       the index from find() was not used.
+    - CmdStringHolder fix from issue #3428
 
 
 RELEASE 3.1.1 - Mon, 07 Aug 2019 20:09:12 -0500
