--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -18,6 +18,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Turn previously deprecated debug options into failures:
       --debug=tree, --debug=dtree, --debug=stree, --debug=nomemoizer.
 
+  From Jakub Kulik
+    - Fix subprocess result bytes not being decoded in SunOS/Solaris related tools.
+
 
 RELEASE 3.1.1 - Mon, 07 Aug 2019 20:09:12 -0500
 
