--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -19,7 +19,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       --debug=tree, --debug=dtree, --debug=stree, --debug=nomemoizer.
 
   From Edoardo Bezzeccheri
-    - Added debug option "timestamp" which outputs to stdout the absolute start and end time for each target.
+    - Added debug option "action_timestamps" which outputs to stdout the absolute start and end time for each target.
 
 
 RELEASE 3.1.1 - Mon, 07 Aug 2019 20:09:12 -0500
