[WIP] enable persistent caching of vcvars on win32
Setting env var SCONS_CACHE_MSVC_CONFIG enables a filesystem cache
of vcvars results, making them persistent across scons runs. On
test runs (notably our CI system) this helps a lot; in normal usage
where you run one scons invocation at a time instead of many hundreds
in a test run it will make things a little more responsive (esp on
vs2019) but the impact will be much smaller.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -17,6 +17,10 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       the index from find() was not used.
     - Turn previously deprecated debug options into failures:
       --debug=tree, --debug=dtree, --debug=stree, --debug=nomemoizer.
+    - If SCONS_CACHE_MSVC_CONFIG env var is set, scons will cache the
+      results of past calls to vcvarsall.bat to a file; integrates with
+      existing memoizing of such vars. On vs2019 saves 5+ seconds per
+      scons invocation, which really helps test suite runs.
 
   From Jacek Kuczera:
     - Fix CheckFunc detection code for Visual 2019. Some functions
