added test and updated docs to indicate that some initial progress output will still be output if you set SetOption('no_progress')

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -7,7 +7,7 @@
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
   From Daniel Moody:
-    - Add no_progress option as a set-able option
+    - Add no_progress (-Q) option as a set-able option
 
   From Mathew Robinson:
 
