Remove deprecated {Source,Target}Signatures
These two have been deprecated since 2010 (about SCons 2.0), commit
935e6985.  Methods are removed, setoption for setting them removed, doc is
removed, tests are migrated to test/Removed/*/Old with a sconstest.skip
file so they don't run, and two new tests are added to confirm that
using the functions and setoptions generate exceptions.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -24,6 +24,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       a file; integrates with existing memoizing of such vars.
       On vs2019 saves 5+ seconds per SCons invocation, which really
       helps test suite runs.
+    - Remove deprecated SourceSignatures, TargetSignatures
 
   From Jacek Kuczera:
     - Fix CheckFunc detection code for Visual 2019. Some functions
