--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -6,6 +6,10 @@
 
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
+  From Adam Gross:
+
+    - Added new module SCons.Scanner.PythonScanner to allow scanning .py files.
+
   From Mathew Robinson:
 
     - Improved threading performance by ensuring NodeInfo is shared
