Fix duplicate "Preserved directory X" messages
This change fixes duplicate "Preserved directory X" messages when running
tests with PRESERVE=1 in the environment. The root cause was that self._dirlist
wasn't being cleared in this codepath.

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -6,6 +6,11 @@
 
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
+  From Adam Gross:
+
+    - Fixed duplicate "Preserved directory X" messages when running unit tests
+	  with PRESERVE=1 in the environment.
+
   From Mathew Robinson:
 
     - Improved threading performance by ensuring NodeInfo is shared
