Added note about Latex Latin-1/UTF-8 issue to CHANGES.log

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -6,6 +6,10 @@
 
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
+  From Philipp Maierhöfer:
+    - Avoid crash with UnicodeDecodeError on Python 3 when a Latex log file in
+      non-UTF-8 encoding (e.g. containing umlauts in Latin-1 encoding) is read.
+
   From Mathew Robinson:
 
     - Improved threading performance by ensuring NodeInfo is shared
