Parse GCC "-imacros" option in ParseFlags

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -35,6 +35,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     
   From Edoardo Bezzeccheri
     - Added debug option "action_timestamps" which outputs to stdout the absolute start and end time for each target.
+    
+  From Ivan Kravets
+    - Parse GCC "-imacros" option in ParseFlags
 
 RELEASE 3.1.1 - Mon, 07 Aug 2019 20:09:12 -0500
 
