--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -42,6 +42,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Edoardo Bezzeccheri
     - Added debug option "action_timestamps" which outputs to stdout the absolute start and end time for each target.
 
+  From Tim Gates
+    - Resolved a typo in engine.SCons.Tool 
 
 RELEASE 3.1.1 - Mon, 07 Aug 2019 20:09:12 -0500
 
