Address GaryO's feedback on PR 3129.  Also reformatted Command() PEP8

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -4,10 +4,9 @@
 
                             Change Log
 
+NOTE: Please add your name below (and your changes) alphabetically by last name.
+
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
-  From Jason Kenny
-    - Update Command() function to accept target_scanner, source_factory, and target_factory arguments.
-      This make Command act more like a one-off builder.
 
   From Edoardo Bezzeccheri
     - Added debug option "action_timestamps" which outputs to stdout the absolute start and end time for each target.
@@ -18,6 +17,10 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
   From Tim Gates
     - Resolved a typo in engine.SCons.Tool
+
+  From Jason Kenny
+    - Update Command() function to accept target_scanner, source_factory, and target_factory arguments.
+      This makes Command act more like a one-off builder.
 
   From Ivan Kravets
     - Added support for "-imacros" to ParseFlags
