--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -21,7 +21,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From Adam Gross:
     - Resolved a race condition in multithreaded Windows builds with Python 2
       in the case where a child process is spawned while a Python action has a
-      file open.
+      file open. Original author: Ryan Beasley.
 
   From Jason Kenny
     - Update Command() function to accept target_scanner, source_factory, and target_factory arguments.
