Remove deprecated BuildDir, build_dir
Updates docs and code; moves tests to test/Removed/BuildDir/Old.
New tests verify that these can no longer be used.

Along the way a small cleanup in SConscript.py

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -66,6 +66,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Remove deprecated SourceSignatures, TargetSignatures
     - Remove deprecated Builder keywords: overrides and scanner
     - Remove deprecated env.Copy
+    - Remove deprecated BuildDir plus SConscript keyword build_dir
     - A number of documentation improvements.
 
 
