--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scons (3.1.1) unstable; urgency=low
+
+  * Maintenance Release
+
+ -- William Deegan <bill@baddogconsulting.com>  Mon, 16 Dec 2019 15:04:42 -0700
+
 scons (3.1.0) unstable; urgency=low
 
   * Maintenance Release
