Get rid of remaining mktemp calls
Except for Platform/win32.py, the engine code no longer
called insecure/deprecated tempfile.mktemp. That location
is now also changed to use better methods.  A couple of
vestiges of old ways (like in comments) cleaned out.

A couple of unit tests also converted - these don't have
any impact on the scons engine, of course.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -24,6 +24,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Remove deprecated SourceCode
     - str.format syntax errors fixed
     - a bunch of linter/checker syntax fixups
+    - Convert remaining uses of insecure/deprecated mktemp method.
 
 
 RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000
