[ci skip] minor fixups on PR #3522

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -31,6 +31,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - str.format syntax errors fixed
     - a bunch of linter/checker syntax fixups
     - Convert remaining uses of insecure/deprecated mktemp method.
+    - Clean up some duplications in manpage.  Clarify portion of manpage on Dir and File nodes.
 
 
 RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000
