--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -15,12 +15,17 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Added C:\msys64\mingw64\bin to default mingw and clang windows PATH's.  This 
       is a reasonable default and also aligns with changes in Appveyor's VS2019 image.
     - Drop support for Python 2.7. SCons will be Python 3.5+ going forward.
+    - Change SCons.Node.ValueWithMemo to consider any name passed when memoizing Value() nodes
+
+  From Jeremy Elson:
+    - Updated design doc to use the correct syntax for Depends()
 
   From Adam Gross:
     - Added support for taking instances of the Value class as implicit
       dependencies.
     - Added new module SCons.Scanner.Python to allow scanning .py files.
-
+    - Added support for explicitly passing a name when creating Value() nodes. This may be useful
+      when the value can't be converted to a string or if having a name is otherwise desirable.
 
   From Mathew Robinson:
     - Improve performance of Subst by preventing unnecessary frame
@@ -38,8 +43,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Convert remaining uses of insecure/deprecated mktemp method.
     - Clean up some duplications in manpage.  Clarify portion of manpage on Dir and File nodes.
 
-  From Jeremy Elson:
-    - Updated design doc to use the correct syntax for Depends()
+
 
 RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000
 
