--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -44,7 +44,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Clean up some duplications in manpage.  Clarify portion of manpage on Dir and File nodes.
     - Reduce needless list conversions.
     - Fixed regex in Python scanner.
-    - Accomodate VS 2017 Express - it's got a more liberal license then VS
+    - Accommodate VS 2017 Express - it's got a more liberal license then VS
       Community, so some people prefer it (from 2019, no more Express)
       vswhere call should also now work even if programs aren't on the C: drive.
 
