[PR #3538] detect msvc case where target arch is set
For Express 2017, no 64-bit tools. When that was fixed to
retry with 32-bit tools, the case where a 64-bit target
was specified failed.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -46,7 +46,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Fixed regex in Python scanner.
     - Accommodate VS 2017 Express - it's got a more liberal license then VS
       Community, so some people prefer it (from 2019, no more Express)
-      vswhere call should also now work even if programs aren't on the C: drive.
+    - vswhere call should also now work even if programs aren't on the C: drive.
 
 
 RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000
