--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -18,6 +18,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       is a reasonable default and also aligns with changes in Appveyor's VS2019 image.
     - Drop support for Python 2.7. SCons will be Python 3.5+ going forward.
     - Change SCons.Node.ValueWithMemo to consider any name passed when memoizing Value() nodes
+    - Fix Github Issue #3550 - When using Substfile() with a value like Z:\mongo\build\install\bin
+      the implementation using re.sub() would end up interpreting the string and finding regex escape
+      characters where it should have been simply replacing existing text. Switched to use string.replace().
     
   From Jeremy Elson:
     - Updated design doc to use the correct syntax for Depends()
