updated the CHANGES.txt

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -50,6 +50,10 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Added support for explicitly passing a name when creating Value() nodes. This may be useful
       when the value can't be converted to a string or if having a name is otherwise desirable.
 
+  From Iosif Kurazs:
+    - Added a new flag called "linedraw" for the command line argument  "--tree"
+      that instructs scons to use single line drawing characters to draw the dependency tree.
+
   From Andrew Morrow:
     - Fix Issue #3469 - Fixed improper reuse of temporary and compiled files by Configure when changing
       the order and/or number of tests.  This is done by using the hash of the generated temporary files
