[doc] Update description of ARCOMSTR  [ci skip]
fixes #3636

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -122,7 +122,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       (used to call telemetry script).
     - Docbook builder provides a fallback if lxml fails to generate
       a document with tostring().
-
+    - Fix description of ARCOMSTR constr. var. (issue 3636)
 
 
 
