reset to development mode

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,13 @@
 
 NOTE: The 4.0.0 Release of SCons will drops Python 2.7 Support
 
+RELEASE 4.1.0.devyyyymmdd - Mon, 04 Jul 2020 16:06:40 -0700
+
+      From John Doe:
+
+        - Whatever John Doe did.
+
+    
 RELEASE 4.0.0 - Sat, 04 Jul 2020 12:00:27 +0000
 
   From Dirk Baechle:
