Added TEMPFILEDIR to allow configuring where TEMPFILEMUNGE create's it's temporary files

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,15 +8,17 @@ NOTE: The 4.0.0 Release of SCons will drops Python 2.7 Support
 
 RELEASE 4.1.0.devyyyymmdd - Mon, 04 Jul 2020 16:06:40 -0700
 
-      From John Doe:
-
-        - Whatever John Doe did.
-
   From Rob Boehne:
     - Fix subprocess execution of 'lslpp' on AIX to produce text standard i/o.
     - Re-do the fix for suncxx tool (Oracle Studio compiler) now that only Python 3 is supported,
       to avoid decoding errors.
-    
+
+  From William Deegan:
+    - Added Environment() variable TEMPFILEDIR which allows setting the directory which temp
+      files createdby TEMPFILEMUNGE are created in.
+
+
+
 RELEASE 4.0.0 - Sat, 04 Jul 2020 12:00:27 +0000
 
   From Dirk Baechle:
