Add to CHANGES.txt

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,7 +24,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
          library already includes this functionality.
        - Remove using pywin32 to retrieve peak memory usage on Win32 for `--debug=memory`
     - Fix Issue #3759 - include scons.1, sconsign.1, scons-time.1 manpages in sdist and wheel packages.
-    
+    - Change SCons's build so the generated `SCons/__init__.py` is no longer removed by `scons -c`
+
 
   From Michał Górny:
     - Fix dvipdf test failure due to passing incorrect flag to dvipdf.
